--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>hellow</h1>
     <h2>hellow world</h2>
+    <h3>rasika gaikwad</h3>
+    <p>Lorem ipsum dolor sit amet.</p>
+    
 </body>
 </html>
